core/src/ast/snapshots/diplomat_core__ast__types__tests__lifetimes-3.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from_syn(&syn::parse_quote! { ::core::my_type::Foo<'test> }, None,\n&SpanLocation::None)"
---
Named:
  path:
    elements:
      - - core
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
      - - my_type
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
      - - Foo
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
  lifetimes:
    - Named:
        - test
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
