core/src/ast/snapshots/diplomat_core__ast__types__tests__lifetimes-4.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from_syn(&syn::parse_quote! { Option<Ref<'object>> }, None,\n&SpanLocation::None)"
---
Option:
  - Named:
      path:
        elements:
          - - Ref
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
      lifetimes:
        - Named:
            - object
            - start_line: 1
              column_line: 0
              range:
                start: 0
                end: 0
              span_location: None
  - Stdlib
