core/src/ast/snapshots/diplomat_core__ast__types__tests__lifetimes-5.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from_syn(&syn::parse_quote! { Foo<'a, 'b, 'c, 'd> }, None,\n&SpanLocation::None)"
---
Named:
  path:
    elements:
      - - Foo
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
  lifetimes:
    - Named:
        - a
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
    - Named:
        - b
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
    - Named:
        - c
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
    - Named:
        - d
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
