core/src/ast/snapshots/diplomat_core__ast__types__tests__lifetimes-8.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from_syn(&syn::parse_quote! { DiplomatSlice<'a, u16> }, None,\n&SpanLocation::None)"
---
PrimitiveSlice:
  - - Named:
        - a
        - start_line: 1
          column_line: 0
          range:
            start: 0
            end: 0
          span_location: None
    - Immutable
  - u16
  - Diplomat
