core/src/ast/snapshots/diplomat_core__ast__types__tests__lifetimes-9.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from_syn(&syn::parse_quote! { DiplomatOwnedSlice<'a, i8> }, None)"
---
PrimitiveSlice:
  - - Named: a
    - Mutable
  - i8
  - Diplomat
