core/src/ast/snapshots/diplomat_core__ast__types__tests__typename_boxes.snap
---
source: core/src/ast/types.rs
expression: "TypeName::from(&syn::parse2(quote! { Box < i32 > }).unwrap())"

---
Box:
  Primitive: i32

